--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,34 +1,44 @@
+body {
+    background: rosybrown;
+} 
 header {
     position:relative;
     display:block;
-    width: 960px;
+    width: 100%;
     height:100%;
     margin:0 auto;
-    padding:1rem 5rem;
+    margin-bottom: 1rem;
+    padding:1rem 1rem 1rem;
     color:#fff;
+    background: #fff;
+    
 }
 header h1 {
-    line-height: 45px;
+    line-height: 30px;
     font-size: 2rem;
+    font-family: 'Georgia', Times, Times New Roman, serif;
     margin: 0; 
     display: inline;
     background: #4aaaa5;
     color: #fff;
+    padding: 15px;
+    
+
 }
 nav {
     padding-left: 0;
-    margin-bottom: 0;
     list-style: none;
-    float:right;
+    float: right;
     display: inline;
+    
 }
 
 nav  li {
     position:relative;
     display:inline-block;
     list-style-type: none;
-    font-family: "Open Sans", "Droid Sans", Helvetica, Arial, sans-serif;
-    color: #222;
+    font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
+    color: #777777;
     padding:0 1rem;
 }
 nav li > a {
@@ -38,8 +48,7 @@ nav li > a {
 }
 nav > li > a:hover,
 nav > li > a:focus {
-    text-decoration: none;
-    background-color: #eee;
+    text-decoration: none
 }
 
 .clearfix:after { 
@@ -51,16 +60,21 @@ nav > li > a:focus {
   }
 
 section {
+
     width: 960px;
     height: 100%;
     display: block;
     margin:0 auto;
-    padding:1rem 5rem;
-
+    padding:1rem 1rem;
+    border: 6px solid #dddddd;
+    background: #fff;
+   
 }
 
 section h1 {
-    color:#777777;
+    color:#4aaaa5;
+    font-family: 'Georgia', Times, Times New Roman, serif;
+    
     
 }
 
@@ -70,7 +84,73 @@ section img {
     float: left;
 }
 
-.1{
-    float: left;
-    padding: 20px;
+p {
+    color: #777777;
+    font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
+}
+
+.image { 
+    position: relative; 
+    
+ }
+ 
+ h2 { 
+    position: absolute; 
+    top: 100px; 
+    left: 0;
+    font-size: 20px;
+    text-align: center;
+    background-color:#4aaaa5;
+    width: 100; 
+ }
+
+form {
+    color: #777777;
+    font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
+}
+
+input {
+    width: 100%;
+    
+}
+
+input[type=text]:focus {
+    background-color: lightblue;
+}
+
+input[type=submit] {
+    background-color: #4aaaa5;
+    color: white;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+    width: 5%;
+}
+
+textarea {
+    width: 100%;
+}
+
+textarea[type="text"]:focus {
+    background-color: lightblue;
+}
+
+footer {
+    
+    background-color: #666;
+    position: fixed;
+    bottom: 0;
+    width: 100%;
+    height: 5%;
+    border-top: 6px solid #4aaaa5;
+    
+}
+
+footer p {
+    text-align: center;
+    color: #fff;
+    font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
+    font-style: italic;
+    font-size: .25cm;
+   
 }
